tools/vz/pkg/analysis/test/cluster/external-dns-issue/cluster-snapshot/cert-manager/external-dns-5969d785df-66x8w/logs.txt
# Copyright (c) 2023, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

==== START logs for container external-dns of pod cert-manager/external-dns-688766bb7f-hfb46 ====
time="2022-12-22T15:11:35Z" level=info msg="config: \{Master: KubeConfig: RequestTimeout:30s IstioIngressGatewayServices:[] ContourLoadBalancerService:heptio-contour/contour SkipperRouteGroupVersion:zalando.org/v1 Sources:[service ingress istio-gateway] Namespace: AnnotationFilter: FQDNTemplate: CombineFQDNAndAnnotation:false IgnoreHostnameAnnotation:false Compatibility: PublishInternal:false PublishHostIP:false AlwaysPublishNotReadyAddresses:false ConnectorSourceServer:localhost:8080 Provider:oci GoogleProject: GoogleBatchChangeSize:1000 GoogleBatchChangeInterval:1s DomainFilter:[bhavani.v8o.io] ExcludeDomains:[] ZoneIDFilter:[ocid1.dns-zone.oc1..8b0e54f2428c4aa8849a73b56a86b698] AlibabaCloudConfigFile:/etc/kubernetes/alibaba-cloud.json AlibabaCloudZoneType: AWSZoneType: AWSZoneTagFilter:[] AWSAssumeRole: AWSBatchChangeSize:1000 AWSBatchChangeInterval:1s AWSEvaluateTargetHealth:true AWSAPIRetries:3 AWSPreferCNAME:false AzureConfigFile:/etc/kubernetes/azure.json AzureResourceGroup: AzureSubscriptionID: AzureUserAssignedIdentityClientID: CloudflareProxied:false CloudflareZonesPerPage:50 CoreDNSPrefix:/skydns/ RcodezeroTXTEncrypt:false AkamaiServiceConsumerDomain: AkamaiClientToken: AkamaiClientSecret: AkamaiAccessToken: InfobloxGridHost: InfobloxWapiPort:443 InfobloxWapiUsername:admin InfobloxWapiPassword: InfobloxWapiVersion:2.3.1 InfobloxSSLVerify:true InfobloxView: InfobloxMaxResults:0 DynCustomerName: DynUsername: DynPassword: DynMinTTLSeconds:0 OCIConfigFile:/etc/kubernetes/oci.yaml InMemoryZones:[] OVHEndpoint:ovh-eu PDNSServer:http://localhost:8081 PDNSAPIKey: PDNSTLSEnabled:false TLSCA: TLSClientCert: TLSClientCertKey: Policy:sync Registry:txt TXTOwnerID:v8o-local-brenv TXTPrefix:_v8o-local-brenv_ Interval:24h0m0s Once:false DryRun:false UpdateEvents:true LogFormat:text MetricsAddress::7979 LogLevel:info TXTCacheInterval:0s ExoscaleEndpoint:https://api.exoscale.ch/dns ExoscaleAPIKey: ExoscaleAPISecret: CRDSourceAPIVersion:externaldns.k8s.io/v1alpha1 CRDSourceKind:DNSEndpoint ServiceTypeFilter:[] CFAPIEndpoint: CFUsername: CFPassword: RFC2136Host: RFC2136Port:0 RFC2136Zone: RFC2136Insecure:false RFC2136TSIGKeyName: RFC2136TSIGSecret: RFC2136TSIGSecretAlg: RFC2136TAXFR:false RFC2136MinTTL:0s NS1Endpoint: NS1IgnoreSSL:false TransIPAccountName: TransIPPrivateKeyFile:}"
time="2022-12-22T15:11:35Z" level=info msg="Instantiating new Kubernetes client"
time="2022-12-22T15:11:35Z" level=info msg="Using inCluster-config based on serviceaccount-token"
time="2022-12-22T15:11:35Z" level=info msg="Created Kubernetes client https://10.96.0.1:443"
time="2022-12-22T15:11:37Z" level=info msg="Created Istio client"
time="2022-12-22T15:11:40Z" level=error msg="getting zones: listing zones in \"ocid1.compartment.oc1..aaaaaaaagqbppnukcembaam3paelu5efp7wg7aoqyhjo43w5kmqonkrt2tcq\": Service error:NotAuthorizedOrNotFound. Authorization failed or requested resource not found.. http status code: 404"
==== END logs for container external-dns of pod cert-manager/external-dns-688766bb7f-hfb46 ====
